--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.products.Food.FoodDetailsActivity">
+    tools:context=".views.products.ProductDetails.ProductDetailsActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
