--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -17,10 +17,7 @@
         <android.support.v7.widget.Toolbar
         android:id="@+id/drawer_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        />
-
-
+        android:layout_height="40dp" />
 
         <TextView
             android:id="@+id/tv_contactinfo"
