--- a/app/src/main/res/layout/drinks_item.xml
+++ b/app/src/main/res/layout/drinks_item.xml
@@ -9,15 +9,19 @@
 
         <ImageView
             android:id="@+id/iv_drink"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:contentDescription="@string/drinks"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/primary_dark"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_below="@id/iv_drink">
 
             <TextView
                 android:id="@+id/tv_name"
@@ -26,20 +30,20 @@
                 android:textAlignment="center"
                 android:textColor="@color/primary_light" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/tv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/primary_light" />
+                android:textColor="@color/primary_light" />-->
 
-            <TextView
+           <!-- <TextView
                 android:id="@+id/tv_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textColor="@color/primary_light" />
-
+-->
             <TextView
                 android:id="@+id/tv_units"
                 android:layout_width="match_parent"
@@ -54,12 +58,12 @@
                 android:textAlignment="center"
                 android:textColor="@color/primary_light" />
 
-            <TextView
+            <!--<TextView
                 android:id="@+id/tv_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/primary_light" />
+                android:textColor="@color/primary_light" />-->
         </LinearLayout>
     </RelativeLayout>
 
