--- a/app/src/main/res/layout/activity_domestic_list.xml
+++ b/app/src/main/res/layout/activity_domestic_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.products.DrinksList.DrinksListActivity">
+    tools:context=".views.products.DomesticList.DomesticListActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
