--- a/app/src/main/res/layout/domestic_item.xml
+++ b/app/src/main/res/layout/domestic_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -9,12 +8,12 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/iv_drink"
+            android:id="@+id/iv_domestic"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:contentDescription="@string/drinks"/>
+            android:contentDescription="@string/domestic"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,7 +21,7 @@
             android:layout_alignParentBottom="true"
             android:background="@color/md_grey_50"
             android:orientation="vertical"
-            android:layout_below="@id/iv_drink">
+            android:layout_below="@id/iv_domestic">
 
             <TextView
                 android:id="@+id/tv_name"
@@ -31,20 +30,6 @@
                 android:textAlignment="center"
                 android:textColor="@color/md_blue_900" />
 
-            <!--<TextView
-                android:id="@+id/tv_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />-->
-
-           <!-- <TextView
-                android:id="@+id/tv_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />
--->
             <TextView
                 android:id="@+id/tv_units"
                 android:layout_width="match_parent"
@@ -59,12 +44,6 @@
                 android:textAlignment="center"
                 android:textColor="@color/md_blue_900" />
 
-            <!--<TextView
-                android:id="@+id/tv_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />-->
         </LinearLayout>
     </RelativeLayout>
 
