--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,76 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/iv_product"
+            android:id="@+id/iv_food"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:contentDescription="@string/product_description" />
+            android:layout_alignParentEnd="true"
+            android:contentDescription="@string/food"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/md_grey_50"
+            android:background="@color/primary_dark"
             android:orientation="vertical"
-            android:layout_below="@id/iv_product">
+            android:layout_below="@id/iv_food">
 
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="product: "
-                android:textSize="@dimen/materialize_baseline_grid_x2"
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900"/>
-            <TextView
+                android:textColor="@color/primary_light" />
+
+            <!--<TextView
                 android:id="@+id/tv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
+                android:textColor="@color/primary_light" />-->
 
+            <!-- <TextView
+                 android:id="@+id/tv_type"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:textAlignment="center"
+                 android:textColor="@color/primary_light" />
+ -->
             <TextView
-                android:id="@+id/tv_type"
+                android:id="@+id/tv_units"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="type: "
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
+                android:textColor="@color/primary_light" />
 
             <TextView
                 android:id="@+id/tv_size"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="size: "
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
-
-            <TextView
-                android:id="@+id/tv_units"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="units: "
-                android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
+                android:textColor="@color/primary_light" />
 
             <!--<TextView
                 android:id="@+id/tv_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="number: "
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />-->
+                android:textColor="@color/primary_light" />-->
         </LinearLayout>
     </RelativeLayout>
 
