--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -13,11 +13,12 @@
 
         <TextView
             android:id="@+id/tv_details_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="144dp"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/iv_details_pic"
@@ -26,12 +27,13 @@
             android:layout_below="@id/tv_details_name"
             tools:ignore="ContentDescription" />
 
-        <!--<TextView
+        <TextView
             android:id="@+id/tv_details_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:layout_below="@id/iv_details_pic"/>-->
+            android:layout_below="@id/iv_details_pic"/>
+
 
         <TextView
             android:id="@+id/tv_details_type"
@@ -50,10 +52,11 @@
 
         <TextView
             android:id="@+id/tv_details_units"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_below="@id/tv_details_size"/>
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="81dp"
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/tv_details_number"
