--- a/app/src/main/res/layout/drinks_item.xml
+++ b/app/src/main/res/layout/drinks_item.xml
@@ -3,69 +3,107 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/iv_drink"
+            android:id="@+id/iv_drinks"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:contentDescription="@string/drinks"/>
+            android:layout_alignParentStart="true"
+            android:contentDescription="@string/product_description" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/md_grey_50"
-            android:orientation="vertical"
-            android:layout_below="@id/iv_drink">
+            android:layout_below="@id/iv_drinks"
+            android:text="Product: " />
 
-            <TextView
-                android:id="@+id/tv_name"
+        <TextView
+            android:id="@+id/tv_drinkname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/iv_drinks"
+            android:layout_marginStart="60dp"
+            android:text="drink"
+            android:textAlignment="center"
+            android:textColor="@color/md_blue_900" />
+
+        <!-- <TextView
+                android:id="@+id/tv_drinkcategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900" />
+                android:textColor="@color/md_blue_900"  />-->
 
-            <!--<TextView
-                android:id="@+id/tv_category"
+        <!--<TextView
+                android:id="@+id/tv_drinktype"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="type: "
                 android:textAlignment="center"
-                android:textColor="@color/primary_light" />-->
+                android:textColor="@color/md_blue_900"  />
+    -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_drinkname"
+            android:text="Size: " />
 
-           <!-- <TextView
-                android:id="@+id/tv_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />
--->
-            <TextView
-                android:id="@+id/tv_units"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/md_blue_900" />
+        <TextView
+            android:id="@+id/tv_drinksize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_drinkname"
+            android:layout_marginStart="60dp"
+            android:text="size "
+            android:textColor="@color/md_blue_900" />
 
-            <TextView
-                android:id="@+id/tv_size"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/md_blue_900" />
+        <TextView
+            android:id="@+id/tv_drinkunits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_drinkname"
+            android:layout_marginStart="90dp"
+            android:text="units"
+            android:textColor="@color/md_blue_900" />
 
-            <!--<TextView
+        <!--<TextView
                 android:id="@+id/tv_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="number: "
                 android:textAlignment="center"
-                android:textColor="@color/primary_light" />-->
-        </LinearLayout>
+                android:textColor="@color/md_blue_900"  />-->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_drinksize"
+            android:text="Price: " />
+
+        <TextView
+            android:id="@+id/tv_drinkprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_below="@+id/tv_drinksize"
+            android:text="price"
+            android:textColor="@color/md_blue_900" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:text="$"
+            android:layout_below="@id/tv_drinksize" />
+
     </RelativeLayout>
+
 
 </android.support.constraint.ConstraintLayout>
