--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,72 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="UselessLeaf">
 
-        <ImageView
-            android:id="@+id/iv_food"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:contentDescription="@string/food"/>
+    <ImageView
+        android:id="@+id/iv_food"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:contentDescription="@string/product_description" />
 
-        <LinearLayout
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/iv_food"
+        android:text="Product: " />
+
+    <TextView
+        android:id="@+id/tv_foodname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/iv_food"
+        android:layout_marginStart="60dp"
+        android:text="food"
+        android:textAlignment="center"
+        android:textColor="@color/md_blue_900" />
+
+    <!-- <TextView
+            android:id="@+id/tv_foodcategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/primary_dark"
-            android:orientation="vertical"
-            android:layout_below="@id/iv_food">
+            android:textAlignment="center"
+            android:textColor="@color/md_blue_900"  />-->
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />
+    <!--<TextView
+            android:id="@+id/tv_foodtype"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="type: "
+            android:textAlignment="center"
+            android:textColor="@color/md_blue_900"  />
+-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_foodname"
+        android:text="Size: " />
 
-            <!--<TextView
-                android:id="@+id/tv_category"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />-->
+    <TextView
+        android:id="@+id/tv_foodsize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_foodname"
+        android:layout_marginStart="60dp"
+        android:text="size "
+        android:textColor="@color/md_blue_900" />
 
-            <!-- <TextView
-                 android:id="@+id/tv_type"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:textAlignment="center"
-                 android:textColor="@color/primary_light" />
- -->
-            <TextView
-                android:id="@+id/tv_units"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />
+    <TextView
+        android:id="@+id/tv_foodunits"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_foodname"
+        android:layout_marginStart="90dp"
+        android:text="units"
+        android:textColor="@color/md_blue_900" />
 
-            <TextView
-                android:id="@+id/tv_size"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />
+    <!--<TextView
+            android:id="@+id/tv_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="number: "
+            android:textAlignment="center"
+            android:textColor="@color/md_blue_900"  />-->
 
-            <!--<TextView
-                android:id="@+id/tv_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textColor="@color/primary_light" />-->
-        </LinearLayout>
-    </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_foodsize"
+            android:text="Price: " />
 
+        <TextView
+            android:id="@+id/tv_foodprice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_below="@+id/tv_foodsize"
+            android:text="price"
+            android:textColor="@color/md_blue_900" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:text="$"
+            android:layout_below="@id/tv_foodsize" />
+
+</RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
