--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/iv_product"
@@ -17,61 +20,94 @@
             android:layout_alignParentStart="true"
             android:contentDescription="@string/product_description" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/md_grey_50"
-            android:orientation="vertical"
-            android:layout_below="@id/iv_product">
+            android:layout_below="@id/iv_product"
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="product: "
-                android:textSize="@dimen/materialize_baseline_grid_x2"
-                android:textAlignment="center"
-                android:textColor="@color/md_blue_900"/>
-            <TextView
+            android:text="Product: " />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/iv_product"
+            android:layout_marginStart="60dp"
+            android:text="product"
+            android:textAlignment="center"
+            android:textColor="@color/md_blue_900" />
+
+        <!-- <TextView
                 android:id="@+id/tv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
+                android:textColor="@color/md_blue_900"  />-->
 
-            <TextView
+        <!--<TextView
                 android:id="@+id/tv_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="type: "
                 android:textAlignment="center"
                 android:textColor="@color/md_blue_900"  />
+-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_name"
+            android:text="Size: " />
 
-            <TextView
-                android:id="@+id/tv_size"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="size: "
-                android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
+        <TextView
+            android:id="@+id/tv_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_name"
+            android:layout_marginStart="60dp"
+            android:text="size "
+            android:textColor="@color/md_blue_900" />
 
-            <TextView
-                android:id="@+id/tv_units"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="units: "
-                android:textAlignment="center"
-                android:textColor="@color/md_blue_900"  />
+        <TextView
+            android:id="@+id/tv_units"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_name"
+            android:layout_marginStart="90dp"
+            android:text="units"
+            android:textColor="@color/md_blue_900" />
 
-            <!--<TextView
+        <!--<TextView
                 android:id="@+id/tv_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="number: "
                 android:textAlignment="center"
                 android:textColor="@color/md_blue_900"  />-->
-        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_size"
+            android:text="Price: " />
+
+        <TextView
+            android:id="@+id/tv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_below="@+id/tv_size"
+            android:text="price"
+            android:textColor="@color/md_blue_900" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:text="$"
+            android:layout_below="@id/tv_size" />
+
+
     </RelativeLayout>
 
 
