--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -115,6 +115,14 @@
             android:text="$"
             android:layout_below="@id/tv_details_size" />
 
+        <Button
+            android:id="@+id/button_add_to_wish_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_to_wish_list"
+            android:layout_below="@+id/tv_details_price"
+            android:layout_marginTop="30dp"/>
+
     </RelativeLayout>
 
 
