--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="60dp"
+            android:layout_marginTop="20dp"
             android:text="Product: "
             android:textSize="16sp" />
 
@@ -24,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="140dp"
+            android:layout_marginTop="20dp"
             android:text="name"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -120,8 +122,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/add_to_wish_list"
+            android:textSize="20sp"
             android:layout_below="@+id/tv_details_price"
-            android:layout_marginTop="30dp"/>
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="100dp"
+            android:background="@color/md_amber_100"
+            android:layout_gravity="center_horizontal"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:outlineAmbientShadowColor="@color/md_green_400" />
 
     </RelativeLayout>
 
