--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -60,7 +60,6 @@
         android:layout_marginTop="5dp"
         android:hint="@string/write_your_message"
         android:textSize="14sp"
-        android:imeActionLabel=""
         android:inputType="textMultiLine" />
 
     <Button
@@ -68,8 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/messageText"
-        android:layout_marginBottom="25dp"
-        android:text="@string/send" />
+        android:text="@string/send"
+        />
 </RelativeLayout>
 
 </FrameLayout>
