--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -130,7 +130,20 @@
             android:layout_gravity="center_horizontal"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
+            android:visibility="visible"
             android:outlineAmbientShadowColor="@color/md_green_400" />
+
+        <TextView
+            android:id="@+id/tv_already_in_wish_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/product_already_in_wish_list"
+            android:layout_below="@+id/tv_details_price"
+            android:textColor="@color/colorAccent"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="25dp"
+            android:textSize="25sp"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
