--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -15,11 +15,22 @@
             android:layout_height="match_parent"
             android:visibility="gone" />
 
+        <TextView
+            android:id="@+id/tv_wish_list_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wish_list_title"
+            android:layout_marginStart="130dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="25dp"
+            android:textColor="@color/md_blue_900"
+            android:textSize="30sp"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_drinks"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/et_filter_search"
+            android:layout_below="@id/tv_wish_list_title"
             android:visibility="gone" />
     </RelativeLayout>
 
